# ANPR-System-web

./: .dockerignore  .env.example  AGENTS.md  AGENTS.ru.md  AGENTS_old.md  CLIENTS_LISTS_REFACTOR_ROADMAP.md  DESIGN_REDESIGN_TASKS.md  Dockerfile  README.md  REVIEW4_CLEANUP.md  REVIEW4_FULL.md  REVIEW4_SUMMARY.md  REVIEW4_TASKS.md  REVIEW5_FULL.md  REVIEW_EXECUTIVE_SUMMARY.md  REVIEW_EXECUTIVE_SUMMARY_RU.md  REVIEW_FULL.md  REVIEW_FULL_REPORT.md  REVIEW_MIGRATION_COMPAT.md  REVIEW_TASKS.md  REVIEW_TASKS_Ru.md  REVIEW_UNUSED_AND_LEGACY.md  ZONES_ROADMAP.md  ZONES_ROADMAP_RU.md  anal.md  auth_roadmap_eng.txt  clients_lists_separation_refactor_roadmap_ru.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: gsd-file-manifest.json  handoff-ui-readme.md  settings.local.json
REVIEW/: REVIEW_CLEANUP_CANDIDATES.md  REVIEW_CLEANUP_CANDIDATES_RU.md  REVIEW_FULL_RU.md  REVIEW_SUMMARY.md  REVIEW_SUMMARY_RU.md  REVIEW_TASKS.md  REVIEW_TASKS_RU.md
anpr/: config.py  model_config.py
common/: logging.py
config/: __init__.py  settings.yaml  settings_manager.py  settings_normalizer.py  settings_repository.py  settings_schema.py
controllers/: __init__.py  service.py
database/: README.md  __init__.py  app_settings_repository.py  base.py  channel_repository.py  clients_repository.py  controller_repository.py  errors.py  lists_repository.py  plate_lists_repository.py  postgres_event_repository.py  user_repository.py  zones_repository.py
docs/: README.md  UI_REDESIGN_TARGET.md  anpr-clean-dashboard-concept.tsx  anpr-pipeline.md  architecture.md  auth.md  diagrams.md  endpoints.md  modules.md  project-structure.md  setup.md  technology-stack.md  zones.md
runtime/: channel_runtime.py  (+4 more)
(+257 files in other folders)
