[project]
name = "anpr-system-web"
version = "0.1.0"
description = "Web-first ANPR system"
authors = [{ name = "OpenAI Codex", email = "codex@openai.com" }]
requires-python = ">=3.13,<4.0"
dynamic = ["dependencies"]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
ultralytics = "8.3.20"
opencv-python = "*"
psutil = "*"
PyYAML = "*"
fastapi = "*"
uvicorn = "*"
psycopg = { version = "*", extras = ["binary"] }
torch = { version = "2.8.0", source = "pytorch-cpu" }
torchvision = { version = "0.23.0", source = "pytorch-cpu" }

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
